feat : add ai analytics